feat: add search parameter for all resources with name and note
With the new 'search' query parameter for the list endpoints, all
string fields of a resource can be searched at the same time.
